--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.4'
     implementation('com.google.firebase:firebase-bom:28.3.0')
     implementation('com.google.firebase:firebase-auth')
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
